# OpenAtlas

./: CMakeLists.txt  README.md
Documents/: OpenAtlasIJArticle.odt
SampleAtlas/: CMakeLists.txt  CMakeLists.txt~  SampleAtlas.config.in  SampleAtlas.mrml.in
Superbuild/: CMakeLists.txt  CTestConfig.cmake  External-ITK.cmake  External-VTK.cmake  Superbuild.cmake
Tools/: CMakeLists.txt  DisplayAdjacentModels.cxx  DisplayAdjacentModels.sh.in  DisplayAllAdjacencies.sh  DisplayAllAdjacentModels.sh.in  FindAdjacentLabels.cxx  FindStructureAttributes.h  FindStructureAttributes.hxx  GenerateAdjacencies.cxx  GenerateAdjacencies.sh.in  GenerateAll.sh.in  GenerateAtlasSummary.cxx  GenerateCubesFromLabels.cxx  GenerateCubesFromLabels.sh.in  GenerateDiffs.sh.in  GenerateDiffsBetweenLastTwo.sh.in  GenerateDiffsToHead.sh.in  GenerateMRB.sh.in  GenerateModelsFromLabels.cxx  GenerateModelsFromLabels.sh.in  GenerateMrmlScene.cxx  GenerateMrmlScene.sh.in  GeneratePortableMRB.sh.in  GenerateStatisticsFromLabels.cxx  GenerateStatisticsFromLabels.sh.in  GetAtlasAttribute.cxx  LabelDiff.cxx  LabelsChanged.cxx  OpenAtlasUtilities.cxx  OpenAtlasUtilities.h  README.md  ReportAllDisconnectedRegions.sh.in  ReportDisconnectedRegions.cxx  ReportLeftRightAdjacencies.cxx  TestConfigure.cxx  ValidateAnatomyNames.py  test.config
